style.css
html {
    scroll-behavior: smooth;    
}

body {
    margin: 0;
    font-family: sans-serif;
    padding: 0;
    display: block;
    background-color: black;
    overflow-x: hidden;
}

header {
    display: flex;
    position: fixed;
    top: 20px;
    left: 10px;
    right: 70px;
    height: 50px;
    line-height: 50px;     
}

header * {
    display: inline;
    height: 50px;   
    color: lightblue; 
}

header ul {
    padding: 0;
    font-family: 'Raleway', sans-serif;
    font-weight: 700;
    font-size: 1.5rem;

}

header li {
    margin-left: 20px;       
}

.main {
    /* Sizing */
    width: 100vw;
    height: 100vh;
    
    /* Flexbox stuff */
    display: flex;
    justify-content: center;
    align-items: center;
    
    /* Text styles */
    text-align: center;
    color: white;
    
    /* Background styles */
    background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url("pics/background.JPG");
    background-size: cover;
    background-position: center center;
    background-repeat: no-repeat;
    background-attachment: fixed;
}

.main h1 {
    /* Text styles */
    font-size: 5rem;
   
    
    /* Margins */
    margin-top: 0;
    margin-bottom: 0.5em;    
}

.main2 {
    /* Sizing */
    width: 100vw;
    height: 100vh;
    
    /* Flexbox stuff */
    display: flex;
    justify-content: center;
    align-items: center;
    
    /* Text styles */
    text-align: center;
    color: white;
    
    /* Background styles */
    background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url("pics/blendTree.gif");
    background-size: cover;
    background-position: center center;
    background-repeat: no-repeat;
    background-attachment: fixed;
}

.main3 {
    /* Sizing */
    width: 100vw;
    height: 100vh;
    
    /* Flexbox stuff */
    display: flex;
    justify-content: center;
    align-items: center;
    
    /* Text styles */
    text-align: center;
    color: white;
    
    /* Background styles */
    background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url("pics/food/steak.gif");
    background-size: cover;
    background-position: center center;
    background-repeat: no-repeat;
    background-attachment: fixed;
}

.main2 h1 {
    /* Text styles */
    font-size: 5rem;
   
    
    /* Margins */
    margin-top: 0;
    margin-bottom: 0.5em;    
}

.main3 h1 {
    /* Text styles */
    font-size: 5rem;
   
    
    /* Margins */
    margin-top: 0;
    margin-bottom: 0.5em;   
}


main h2{
    font-family: 'Raleway', sans-serif;
    letter-spacing: 1px;
    text-align: center;    
    width: 30vw;

}


.section-inner1 h2{
    text-align: left;
    width: 30vw;
}

p {
    font-family: 'Raleway', sans-serif;
    font-size: 28px;

}

section {
    height: 1080px;
    border: 1px solid black;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: left;
   
    color: white;        
    

    background-size: cover; /* Add this line */
    background-position: center center; /* Add this line */
    background-repeat: no-repeat; /* Add this line */
    background-attachment: fixed; /* Add this line */
}

a {
    color: lightblue;
}

a:hover {
    color: white;
    text-align: center;
}

footer {
    text-align: center;
    padding: 50px;
    font-family: 'Raleway', sans-serif;
}


section p {
    font-size: 1.25vw;  
    margin-left: 5vw;
    margin-right: 10vw;    
    width: 40vw;
    line-height: 1.5;
    text-align: left; 
    display: inline-block;
}

section a {
    display: inline-block;
    text-align: center;
    font-family: 'Raleway', sans-serif;
    
}

section h2 {
    font-size: 2.5vw;    
    margin-left: 10vw;
    margin-right: 10vw;  
    width: 30vw;
    text-align: left;
    font-family: 'Raleway', sans-serif;
    
}

section h3 {
    font-size: 1.5vw;
    margin-left: 10vw;
    margin-right: 10vw;
    margin-bottom: 50px;
    text-align: left;
    color: darkgray;
    font-family: 'Raleway', sans-serif;
    
}

section ul {
    list-style: none;
    margin-left: 0;
        text-align: center;

}

section .profile-pic {
    margin-top: 25px;
    margin-left: 10vw;
    width: 15vw;
    border-radius: 50%;
    float: left;
    
}

section .logo {
    margin-top: 25px;    
    margin-left: 10vw;
    width: 5vw;
    border-radius: 50%;
    float: left;
    
}

.contact_text {    
    font-size: 1.5vw;
    margin-top: 2vw;
    margin-bottom: 30px;    
    margin-left: 2.5vw;    
    float: right;
}

section .game-art {
    margin-top: 40px;
    margin-left: 10vw;
    width: 40vw;
    float: left;
}

.text-link {
    margin-top: 1vw;
}

.img-link {    
    float: left;
}

header a {
    text-decoration: none;
    color: white;
    font-size: 1rem;
}

header a:hover {
    color: lightblue;
}

footer {
    color: white;
}

.featurette-img {
    margin-left: 17.5vw;
    margin-bottom: 50px;
    width: 30vw;    
}

.lead {
    color: white;
    font-size: 1.25vw;    
    margin-right: 17.5vw;
    width: 30vw;
    float: right;
    display: inline-block;
}

.gallery {
    margin-left: 0px; 
    margin-right: 0px;
    width: 105vw;
}

.gallery img {
    transition: 1s;
    padding: 0px;
    width: 12.15vw;
}

.gallery img:hover {
    filter: blur(4px);
    transform: scale(1.1);
}

#food {
    height: 500px;
}

#food h2 {
    margin-left: 0vw;
    text-align: left;
}

#food p {
    margin-left: 0vw;
    margin-right: 0vw;
    width: 50vw;
    text-align: left;
}

/* Featurettes
------------------------- */

.featurette-divider {
    margin: 5rem 0; /* Space out the Bootstrap <hr> more */
    color: darkgray;
    background-color: black;
}

/* Thin out the marketing headings */
.featurette-heading {
    font-weight: 300;
    font-size: 2.5vw;
    line-height: 1;
    text-align: left;
    letter-spacing: -.05rem;
    color: white;           
    width: 30vw;
    margin-left: 51.5vw;   
}


/* RESPONSIVE CSS
-------------------------------------------------- */

@media (min-width: 40em) {
  .featurette-heading {
      font-size: 2.5vw;      
      color: white;
      width: 30vw;
  }
}

@media (min-width: 62em) {
  .featurette-heading {
      margin-top: 7rem;
      color: white;
  }
}

